--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
                 <p>076-6576725 / 078-4595196</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63320.4300347116!2d80.59076174263953!3d7.294543952139759!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae366266498acd3%3A0x411a3818a1e03c35!2sKandy!5e0!3m2!1sen!2slk!4v1620027418364!5m2!1sen!2slk" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63320.4300347116!2d80.59076174263953!3d7.294543952139759!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae366266498acd3%3A0x411a3818a1e03c35!2sKandy!5e0!3m2!1sen!2slk!4v1620027418364!5m2!1sen!2slk" frameborder="0"  width= "800" height="290" style="border:0;" allowfullscreen loading="lazy"></iframe>
             </div>
 
           </div>
